# Hydra-Soundcard

./: .gitignore  CHANGELOG.md  Package.swift  README.md  project.yml
Hydra.xcodeproj/: project.pbxproj
Packaging/: README.md  RELEASING.md  build_installer.sh  build_pkg.sh
Packaging/installer_resources/: Info.plist
Packaging/scripts/: postinstall
RE/graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
Scripts/: bridges_install.sh  fetch_vst3sdk.sh  generate_xcodeproj.rb  install_and_test.sh  install_local.sh  release.sh
Sources/HydraApp/: ContentView.swift  DaemonClient.swift  DaemonService.swift  FluxView.swift  GridView.swift  HydraApp.swift  IconPack.swift  Info.plist  InspectorView.swift  Localizable.xcstrings  MenuBarPanel.swift  PluginPickerSheet.swift  SearchField.swift  SettingsView.swift  SidebarView.swift  StripGridView.swift  SurfaceConfigSheet.swift  Theme.swift  Updater.swift
Sources/HydraCore/: HydraConstants.swift  Messages.swift  NetworkUtils.swift  PluginSearchEngine.swift
Sources/HydraInstaller/: CompleteView.swift  Component.swift  ContentView.swift  FooterView.swift  InstallView.swift  Installer.swift  InstallerState.swift  LicenseView.swift  SelectionView.swift  SidebarView.swift  WelcomeView.swift  main.swift
Sources/HydraNDIShim/: hydra_ndi.c
Sources/HydraSurface/: HUI.swift  (+6 more)
Sources/Inferno/hydra-inferno-bridge/: Cargo.toml
Sources/Inferno/hydra-inferno-bridge/src/: main.rs
Sources/Inferno/searchfire/: Cargo.toml  README.md
Sources/Inferno/searchfire/examples/: broadcast.rs  discovery.rs
Sources/Inferno/searchfire/src/: broadcast.rs  discovery.rs  lib.rs  net.rs  socket.rs  tests.rs
Sources/Inferno/searchfire/src/broadcast/: service.rs
Sources/Inferno/searchfire/tests/: client_and_server.rs
Sources/Inferno/usrvclock-rs/: Cargo.toml  LICENSE-MIT  README.md
Sources/Inferno/usrvclock-rs/src/: lib.rs
docs/: index.html
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  .graphify_root  graph.html  manifest.json
(+821 files in other folders)
