[package]
name = "usrvclock"
version = "0.2.0"
edition = "2021"
authors = ["Teodor Wozniak <teo@lumifaza.org>"]
keywords = ["clock"]
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio", "unix"]
tokio = ["dep:tokio"]
unix = ["dep:nix"]

[dependencies]
custom_error = "1.9.2"
nix = { version="0.29.0", optional=true, features=["time", "fs"] }
tokio = { version="1.38.1", optional=true, features=["net", "rt", "time", "sync", "macros"] }
